# memscrimper

./: LICENSE  README.md
memscrimper/: compress_bzip2.py  compress_interdedup.py  util.py
memscrimper_cpp_implementation/: CMakeLists.txt  LICENSE  mscr_client.py  mscr_client_python2.py  mscr_client_python3.py  readme.md
memscrimper_cpp_implementation/src/: interdedup_compress.cpp  interdedup_compress.h  interdedup_decompress.cpp  interdedup_decompress.h  memdump.cpp  memdump.h  memscrimper.cpp  request_handler.cpp  request_handler.h  socket_api.cpp  socket_api.h  utils.cpp  utils.h
memscrimper_poc/: compress_7zip.py  compress_gzip.py  compress_interdedup.py  compress_intradedup.py
